fix overflow/scrolling on some popups and adjust paddings and font sizes for tiny phones

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -5,6 +5,7 @@
   --card-border-radius: 2em;
   --box-shadow-light: 0 5px 4px rgba(100, 100, 100, 0.1);
   --box-shadow-strong: 0 5px 4px rgba(100, 100, 100, 0.3);
+  --padding-card: 22px;
 }
 
 body {
@@ -109,7 +110,6 @@ ul {
 }
 
 .card, .image-card {
-  --padding-card: 22px;
   padding: var(--padding-card) !important;
   background-color: aliceblue;
   border-radius: var(--card-border-radius);
@@ -187,12 +187,7 @@ border-radius: var(--card-border-radius) var(--card-border-radius) 0 0;
   overflow-x: hidden;
 }
 
-.gameNavBtn:not(.highlighted), #btnPowers:not(.highlighted) {
-  background-color: aliceblue;
-  color: darkblue;
-}
-
-button.highlighted {
+button.highlighted, input[type="submit"].highlighted {
   background-color: darkblue;
   color: aliceblue;
 }
@@ -210,8 +205,8 @@ button.highlighted {
   margin: 5px auto;
   padding: 0 1em;
   outline: none;
-  background-color: darkblue;
-  color: aliceblue;
+  background-color: aliceblue;
+  color: darkblue;
   height: 50px;
   line-height: 45px;
   font-size: large;
@@ -327,11 +322,26 @@ button.highlighted {
 }
 
 
+/* Changes for Tiny mobile (Iphone SE) */
+@media only screen and (max-width: 400px) {
+  #answbtn, .gameNavBtn, #btnPowers, input[type="submit"] {
+    font-size: medium;
+  }
+
+  h2, h3 {
+    font-size: medium;
+  }
+
+  * {
+    --padding-card: 18px;
+  }
+}
+
 /* Changes for Mobile*/
 @media only screen and (max-width: 767px) {
 
-  h1 {
-    font-size: medium;
+  h1, h4 {
+    font-size: small;
   }
 
   h3 {
@@ -346,7 +356,7 @@ button.highlighted {
 
 /* Changes for PC*/
 @media only screen and (min-width: 768px) {
-  .card {
+  * {
     --padding-card: 30px;
   }
 
